go back to using capability item energy, but with a component for saving